--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -4,3 +4,4 @@
 <% @recipe_ingredients.each do |ingredient| %>
   <p> <%= ingredient.name %>: <%= ingredient.cost %> </p>
 <% end %> 
+<p> Total Cost: <%= @recipe_ingredients_cost %> </p>
